# pool_guard

./: .env.example  .gitignore  README.md  main.py  model_train.ipynb  pyproject.toml  requirements.txt  zone.json
.github/workflows/: ci.yml
classifiers/: classifier.py  custom_model.py  resnet_model.py
configs/: default.yaml  pi.yaml
detectors/: yolo_detector.py
requirements/: base.txt  dev.txt  ml.txt  pc-gpu.txt  pi-cpu.txt
scripts/: create_clean_dataset.py  finalize_dataset.py  prepare_dataset.py  prepare_dataset_yolo.py  train_classifier.py  train_keras.py  train_resnet50.py  zone_editor.py
src/pool_guard/: __main__.py  cli.py  constants.py  exceptions.py
src/pool_guard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pool_guard/alarms/: __init__.py  base.py  composite.py  gpio.py  http.py  rate_limiter.py
src/pool_guard/api/: __init__.py  app.py
src/pool_guard/capture/: __init__.py  threaded_capture.py
src/pool_guard/classifiers/: __init__.py  base.py  stub.py  tflite_runtime.py  torchscript.py
src/pool_guard/config/: __init__.py  loader.py  schema.py
src/pool_guard/detectors/: __init__.py  base.py  stub.py  yolo_ultralytics.py
src/pool_guard/logging/: __init__.py  event_store.py  setup.py
src/pool_guard/pipeline/: __init__.py  runner.py
src/pool_guard/utils/: images.py  threading.py  time.py
src/pool_guard/zone/: __init__.py  editor.py  polygon.py
tests/: test_ci_smoke.py  test_pipeline_stub_smoke.py
training_notebooks/: model_train copy.ipynb
utils/: drawing.py  geometry.py
