[project]
name = "pool-guard"
version = "0.1.0"
requires-python = ">=3.10"
description = "Pool Guard - Edge AI Pool Safety"
readme = "README.md"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E: syntax / runtime errors
# F: undefined names, unused imports
# I: import order
select = ["E", "F", "I"]

# MVP aşamasında gereksiz sertlik
ignore = ["B905"]


[tool.mypy]
python_version = "3.10"

# Ciddi hataları yakala
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

# MVP için gerçekçi ayarlar
disallow_untyped_defs = false
no_implicit_optional = true

# 3rd-party ML / CV lib'ler mypy'yi boğmasın
ignore_missing_imports = true
