[project]
name = "pool-guard"
version = "0.1.0"
requires-python = ">=3.10"
description = "Pool Guard - Edge AI Pool Safety"
readme = "README.md"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E: syntax / runtime errors
# F: undefined names, unused imports
# I: import order
select = ["E", "F", "I"]

# MVP aşamasında gereksiz sertlik
ignore = ["B905"]


[tool.mypy]
# MVP'DE MYpy KAPALI KABUL EDİLİR
ignore_errors = true
