[project]
name = "pool-guard"
version = "0.1.0"
requires-python = ">=3.10"
description = "Pool Guard - Edge AI Pool Safety"
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",  # line length
  "I001",  # import order
  "B905",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true
